# MRI-CV-MODEL-TRAINING-AND-INFERENCE-PROJECT

./: .coverage  .gitignore  .pre-commit-config.yaml  CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  COMMIT_MESSAGE.md  EXPORT_DATASET_EXAMPLES_FIX.md  FULL_SCALE_TRAINING_GUIDE.md  IMPLEMENT_UNIFIED_ENCODER.md  KAGGLE_DATASET_QUICKSTART.md  LICENSE  MULTI_TASK_DEBUG_PLAN.md  QUICKSTART COMMAND LIST.md  README.md  SCRIPTS_REFERENCE.md  SKULL_BOUNDARY_DETECTION_FIX_SUMMARY.md  TEST_COVERAGE_PLAN.md  api_test_results.json  debug_service.py  full_e2e_test_results.json  full_scale_brats_e2e_results.json  multitask_e2e_test_results.json  phase1_phase2_full_e2e_results.json  phase2_e2e_results.json  pipeline_results.json  pyproject.toml  requirements.txt  setup.py  test_backend.py  test_results.txt
app/: __init__.py
archives/: check_brats_balance.py  check_checkpoint_info.py  complete_test_flow.py  test_api_with_gradcam.py  test_backend_api.py  test_backend_save_mask.py  test_brain_mask_segmentation.py  test_gradcam_brain_masking.py  visualize_multitask_segmentation.py
configs/: QUICK_TEST_CONFIGS_SUMMARY.md  README.md  config_cls.yaml  config_cls_brats.yaml  config_cls_production.yaml  hpc.yaml  hpc_quick_test.yaml  local.yaml  multi_task_production.yaml  multitask_cls_head_production.yaml  multitask_cls_head_quick_test.yaml  multitask_joint_production.yaml  multitask_joint_quick_test.yaml  multitask_seg_warmup.yaml  multitask_seg_warmup_production.yaml  multitask_seg_warmup_quick_test.yaml  seg2d_baseline.yaml  seg2d_production.yaml  seg2d_quick_test.yaml
documentation/: ACCOMPLISHMENTS.md  APP_ARCHITECTURE_AND_FUNCTIONALITY.md  ARCHIVES_REPOSITORY_GUIDE.md  BRATS_DATASET_GUIDE.md  BRATS_NO_TUMOR_SLICES_UPDATE.md  BUGFIX_KAGGLE_PREPROCESSING.md  BUGFIX_SEGMENTATION_CV2_IMPORT.md  CLEANUP_SUMMARY.md  CONFIG_GUIDE.md  CONFIG_REFACTORING_SUMMARY.md  CONFIG_SYSTEM_ARCHITECTURE.md  CONSOLIDATED_DOCUMENTATION.md  DATASET_COMPARISON.md  DATASET_LOADING_OPTIMIZATION.md  DATA_ARCHITECTURE_AND_MANAGEMENT.md  DATA_README.md  FEATURE_MAP.md  FRONTEND_REFACTORING.md  FULL-PLAN.md  FULL_E2E_TEST_GUIDE.md  GETTING_STARTED.md  GRADCAM_BRAIN_MASKING_FIX.md  IMPLEMENTATION_ISSUES_AND_FIXES.md  INSTALL_PYTEST.md  KAGGLE_ROBUST_MASKING_DEPLOYMENT.md  LOGGING_SYSTEM_GUIDE.md  MERGE_SUMMARY.md  MODEL_CONFIG_SYSTEM.md  MULTITASK_LEARNING_COMPLETE.md  MULTI_TASK_GRADCAM_DEBUG_SUMMARY.md  PHASE0_COMPLETE.md  PHASE0_MULTITASK_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_PHASE2_E2E_TEST.md  PHASE1_PROGRESS.md  PHASE2.2_QUICK_START.md  PHASE2.3_QUICK_START.md  PHASE2_COMPLETE.md  PHASE2_QUICKSTART.md  PHASE2_QUICK_TEST_GUIDE.md  (+29 more)
outputs/: training_results_20251204_030348.json  training_results_20251204_030524.json  training_results_20251204_031017.json  training_results_20251204_031110.json  training_results_20251204_031244.json  training_results_20251204_031440.json
results/: multitask_evaluation  multitask_evaluation.json  phase_comparison.json
scripts/: FULL_PIPELINE_SUMMARY.md  README.md  calibrate_classifier.py  debug_multitask_data.py  debug_preprocessing.py  download_kaggle_data.py  evaluate_classifier.py  (+44 more)
(+287 files in other folders)
